...
        android:layout_height="4dp"
        android:paddingBottom="4dp"
        android:layout_below="@id/orgsButton"
        android:background="?android:attr/listDivider" />

    <EditText
        android:id="@+id/clanTextEntry"
        android:layout_below="@id/divider2"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:hint="Enter new clan name"
        android:inputType="text"
...
